# quantstats-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_zh.md  data  tearsheet.html  tearsheet_with_benchmark.html
examples/: common.rs  html_report.rs  html_with_benchmark.rs
scripts/: gen_examples_common.py
src/: lib.rs  plots.rs  report_template.html  reports.rs  stats.rs  utils.rs
